--- a/4-natours/starter/dev-data/templates/tourTemplate.pug
+++ b/4-natours/starter/dev-data/templates/tourTemplate.pug
@@ -1,7 +1,7 @@
 section.section-header
   .header__hero
     .header__hero-overlay &nbsp;
-    img.header__hero-img(src='/img/tour-5-cover.jpg', alt='Tour 5')
+    img.header__hero-img(src='/img/tour-5-cover.jpg' alt='Tour 5')
 
   .heading-box
     h1.heading-primary
@@ -45,15 +45,15 @@ section.section-description
       .overview-box__group
         h2.heading-secondary.ma-bt-lg Your tour guides
         .overview-box__detail
-          img.overview-box__img(src='/img/users/user-19.jpg', alt='Lead guide')
+          img.overview-box__img(src='/img/users/user-19.jpg' alt='Lead guide')
           span.overview-box__label Lead guide
           span.overview-box__text Steven Miller
         .overview-box__detail
-          img.overview-box__img(src='/img/users/user-18.jpg', alt='Tour guide')
+          img.overview-box__img(src='/img/users/user-18.jpg' alt='Tour guide')
           span.overview-box__label Tour guide
           span.overview-box__text Lisa Brown
         .overview-box__detail
-          img.overview-box__img(src='/img/users/user-17.jpg', alt='Intern')
+          img.overview-box__img(src='/img/users/user-17.jpg' alt='Intern')
           span.overview-box__label Intern
           span.overview-box__text Max Smith
 
@@ -62,43 +62,43 @@ section.section-description
     p.description__text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
     p.description__text Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum!
 
-section.section-pictures
-  .picture-box
-    img.picture-box__img.picture-box__img--1(src='/img/tour-5-1.jpg', alt='The Park Camper Tour 1')
-  .picture-box
-    img.picture-box__img.picture-box__img--2(src='/img/tour-5-2.jpg', alt='The Park Camper Tour 1')
-  .picture-box
-    img.picture-box__img.picture-box__img--3(src='/img/tour-5-3.jpg', alt='The Park Camper Tour 1')
+    section.section-pictures
+      .picture-box
+        img.picture-box__img.picture-box__img--1(src='/img/tour-5-1.jpg' alt='The Park Camper Tour 1')
+      .picture-box
+        img.picture-box__img.picture-box__img--2(src='/img/tour-5-2.jpg' alt='The Park Camper Tour 1')
+      .picture-box
+        img.picture-box__img.picture-box__img--3(src='/img/tour-5-3.jpg' alt='The Park Camper Tour 1')
 
-section.section-map
-  #map
+    section.section-map
+      #map
 
-section.section-reviews
-  .reviews
+    section.section-reviews
+      .reviews
 
-    .reviews__card
-      .reviews__avatar
-        img.reviews__avatar-img(src='/img/users/user-7.jpg', alt='Jim Brown')
-        h6.reviews__user Jim Brown
-      p.reviews__text Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque dignissimos sint quo commodi corrupti accusantium veniam saepe numquam.
-      .reviews__rating
-        svg.reviews__star.reviews__star--active
-          use(xlink:href='/img/icons.svg#icon-star')
-        svg.reviews__star.reviews__star--active
-          use(xlink:href='/img/icons.svg#icon-star')
-        svg.reviews__star.reviews__star--active
-          use(xlink:href='/img/icons.svg#icon-star')
-        svg.reviews__star.reviews__star--active
-          use(xlink:href='/img/icons.svg#icon-star')
-        svg.reviews__star.reviews__star--active
-          use(xlink:href='/img/icons.svg#icon-star')
+        .reviews__card
+          .reviews__avatar
+            img.reviews__avatar-img(src='/img/users/user-7.jpg' alt='Jim Brown')
+            h6.reviews__user Jim Brown
+          p.reviews__text Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque dignissimos sint quo commodi corrupti accusantium veniam saepe numquam.
+          .reviews__rating
+            svg.reviews__star.reviews__star--active
+              use(xlink:href='/img/icons.svg#icon-star')
+            svg.reviews__star.reviews__star--active
+              use(xlink:href='/img/icons.svg#icon-star')
+            svg.reviews__star.reviews__star--active
+              use(xlink:href='/img/icons.svg#icon-star')
+            svg.reviews__star.reviews__star--active
+              use(xlink:href='/img/icons.svg#icon-star')
+            svg.reviews__star.reviews__star--active
+              use(xlink:href='/img/icons.svg#icon-star')
 
 section.section-cta
   .cta
     .cta__img.cta__img--logo
-      img(src='/img/logo-white.png', alt='Natours logo')
-    img.cta__img.cta__img--1(src='/img/tour-5-2.jpg', alt='')
-    img.cta__img.cta__img--2(src='/img/tour-5-1.jpg', alt='')
+      img(src='/img/logo-white.png' alt='Natours logo')
+    img.cta__img.cta__img--1(src='/img/tour-5-2.jpg' alt='')
+    img.cta__img.cta__img--2(src='/img/tour-5-1.jpg' alt='')
     .cta__content
       h2.heading-secondary What are you waiting for?
       p.cta__text 10 days. 1 adventure. Infinite memories. Make it yours today!
